<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	android:layout_width="match_parent"
	android:layout_height="wrap_content"
	android:layout_marginStart="10dp"
	android:layout_marginTop="5dp"
	android:layout_marginEnd="10dp"
	android:layout_marginBottom="5dp"
	app:cardBackgroundColor="@android:color/white"
	app:cardCornerRadius="5dp">

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="vertical"
		android:padding="5dp">

		<TextView
			android:id="@+id/repo_name"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/sample_name"
			android:textColor="@color/titleColor"
			android:textSize="@dimen/repo_name_size" />

		<TextView
			android:id="@+id/repo_description"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:maxLines="10"
			android:text="@string/sample_desc"
			android:textSize="@dimen/repo_description_size" />

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:orientation="horizontal">

			<TextView
				android:id="@+id/repo_language"
				android:layout_width="0dp"
				android:layout_height="wrap_content"
				android:layout_weight="1"
				android:paddingVertical="@dimen/row_item_margin_vertical"
				android:text="@string/language"
				android:textSize="@dimen/repo_description_size" />

			<ImageView
				android:id="@+id/star"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_gravity="center"
				android:contentDescription="@string/star"
				android:src="@drawable/ic_star" />

			<TextView
				android:id="@+id/repo_stars"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/count"
				android:textSize="@dimen/repo_description_size" />

			<ImageView
				android:id="@+id/forks"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_gravity="center"
				android:contentDescription="@string/forks"
				android:src="@drawable/ic_git_branch" />

			<TextView
				android:id="@+id/repo_forks"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/count"
				android:textSize="@dimen/repo_description_size" />
		</LinearLayout>
	</LinearLayout>
</androidx.cardview.widget.CardView>

